Fix #4469 PDF viewer spread misaligned due to bottom margin

--- a/viewer/latexworkshop.css
+++ b/viewer/latexworkshop.css
@@ -99,7 +99,8 @@ html[dir='rtl'] .findbar {
     box-shadow: 0px 0px 0px 1px lightgrey;
 }
 
-.pdfViewer.removePageBorders .page:last-of-type {
+.pdfViewer.removePageBorders > .page:last-of-type,
+.pdfViewer.removePageBorders .spread:last-of-type .page {
     margin-bottom: 0px;
 }
 
